--- a/src/pages/MoviesGrid.css
+++ b/src/pages/MoviesGrid.css
@@ -62,3 +62,10 @@
     background-color: transparent;
     color:#f7d354;
 }
+.charging-image{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 463px;
+    margin-bottom: 1rem;
+}
